welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: illegal start of simple expression
	for (i<- 1 to 5);
                        ^